<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">baseworld</string>
    <string name="app_name">baseworld</string>

    <string name="app_icon_tip">app_icon</string>

    <string-array name="tab_text"></string-array>

    <string name="app_back">返回</string>
    <string name="app_loading">请稍候，正在拉取数据....</string>
    <string name="app_loading_none">未找到数据.</string>
    <string name="app_loading_fail">数据加载失败，请稍后再试.</string>
    <string name="app_loading_fail_web">网页加载失败，请稍后再试.</string>
    <string name="app_refresh">刷新</string>
    <string name="app_share">分享</string>

    <string name="app_exit_title">退出</string>
    <string name="app_exit_message">确定退出应用?</string>

    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>

    <string name="app_upgrade_confirm">确定</string>
    <string name="app_upgrade_cancel">取消</string>
    <string name="check_new_version">发现新版本,确定更新吗?</string>
    <string name="check_new_version_title">检查新版本</string>
    <string name="check_new_version_message">正在获取新版本信息 ....</string>
    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
    <string name="check_new_version_latest">已经是最新版本!</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>

    <string name="setting_about_title">关于</string>
    <string name="setting_about_subject">花界\nFlower World</string>
    <string name="setting_about_description">看花，议花，识花，提高您的赏花素养！</string>
    <string name="setting_about_copyright_1">开源项目 版权所有</string>
    <string name="setting_about_copyright_2">Copyright © 2012~2013 杰风工作室.</string>
    <string name="setting_about_copyright_3">All Rights Reserved.</string>

    <!-- alipay -->
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="signTypeHint">"signType"</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>

    <string name="donate_subject">为开源项目捐赠</string>
    <string name="donate_body">你的支持，让我们做的更好！</string>

    <string name="setting_share_app_title">分享应用</string>
    <string name="setting_share_app_subject">向你分享一个精彩应用《花界》</string>
    <string name="setting_share_app_body">向你分享一个精彩应用《花界》,看最新高清花图，学习养花知识，教你赏花，下载地址:</string>
    <string name="setting_market_none">未找到可用的应用市场.</string>

    <string name="setting_clear_title">清除缓存</string>
    <string name="setting_clear_text">请稍候，正在清除缓存....</string>
    <string name="setting_clear_success">清除缓存完毕，还你清爽空间！</string>

    <string name="app_header_back">返回</string>
    <string name="app_header_menu">设置</string>
    <string name="app_header_menu_1">搜索</string>
    <string name="app_notice_text">每天持续更新，在设置里面还可以去广告哦~</string>
    <string name="app_notice_options_text">副版，主要提供一些更精彩的内容、VIP福利等！</string>
    <string name="app_status_options_text">您的支持，是我们精益求精的动力!</string>

    <string name="main_options">选项</string>
    <string name="main_options_share">分享</string>
    <string name="main_options_copy">复制文字</string>
    <string name="main_options_copy_toast">已经成功复制到剪贴板。</string>
    <string name="main_options_share_title">分享一条来自《幽默笑话》的资讯</string>

    <string name="options_title">幽默笑话副版</string>
    <string name="details_title">正文</string>
    <string name="archiver_title">归档</string>
    <string name="archiver_notice_text">按时间顺序历史归档，以分页形式查看。</string>
    <string name="archiver_page_title">归档.第%s页</string>
    <string name="ref_set_title">精品合集</string>
    <string name="ref_set_simple_title">精品合集.第%s季</string>
</resources>
