<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:background="#FFFFFA">
    <include android:id="@+id/app_banner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_header_height"
        layout="@layout/app_header"
        android:layout_alignParentTop="true" />
    <LinearLayout android:id="@+id/app_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dip">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_about_copyright_1"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:textColor="#000000"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_about_copyright_2"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:textColor="#000000"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_about_copyright_3"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/app_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_banner"
        android:layout_marginTop="12dip">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_about_subject"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="20dip"
            android:drawableLeft="@drawable/icon"
            android:textColor="#000000"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:layout_marginTop="5dip"
            android:text="@string/setting_about_description"
            android:textColor="#000000"/>
        <TextView android:id="@+id/setting_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:layout_marginTop="5dip"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#FFFFFA"
        android:gravity="center"
        android:layout_below="@id/app_header"
        android:layout_above="@id/app_footer">
        <WebView android:id="@+id/setting_about_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </WebView>
    </LinearLayout>
</RelativeLayout>
