<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:background="?app_header_top_line"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:background="?app_header_bg">
        <Button android:id="@+id/app_header_back"
            android:textSize="@dimen/app_back_size"
            android:textColor="@color/app_title_white"
            android:background="@drawable/app_header_menu_selector"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/app_header_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            style="@style/app_title_shadow"/>
        <ImageView android:id="@+id/app_header_back_divider"
            android:background="@drawable/app_header_divider"
            android:layout_width="2px"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_toRightOf="@id/app_header_back"/>
        <ImageButton android:id="@+id/app_header_options"
            android:textSize="@dimen/app_back_size"
            android:textColor="@color/app_title_white"
            android:background="@drawable/app_header_menu_selector"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/app_header_back"
            android:src="@drawable/app_header_options"
            android:visibility="gone"
            style="@style/app_title_shadow"/>
        <ImageView android:id="@+id/app_header_back_divider1"
            android:background="@drawable/app_header_divider"
            android:layout_width="2px"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_toRightOf="@id/app_header_options"/>
        <TextView android:id="@+id/app_title"
            android:layout_toRightOf="@id/app_header_back_divider1"
            android:layout_centerVertical="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_title_left"
            style="@style/app_title_shadow"
            android:textSize="@dimen/app_title_size"
            android:textColor="@color/app_title_white"
            android:text="@string/app_name"/>
        <Button android:id="@+id/app_header_menu"
            android:textSize="@dimen/app_menu_size"
            android:textColor="@color/app_title_white"
            android:background="@drawable/app_header_menu_selector"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/app_header_menu"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            style="@style/app_title_shadow"/>
        <ImageView android:id="@+id/app_header_divider"
            android:background="@drawable/app_header_divider"
            android:layout_width="2px"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_toLeftOf="@id/app_header_menu"/>
        <Button android:id="@+id/app_header_menu_1"
            android:textSize="@dimen/app_menu_size"
            android:textColor="@color/app_title_white"
            android:background="@drawable/app_header_menu_selector"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/app_header_menu_1"
            android:layout_toLeftOf="@id/app_header_divider"
            android:layout_centerVertical="true"
            android:visibility="gone"
            style="@style/app_title_shadow"/>
        <ImageView android:id="@+id/app_header_divider_1"
            android:background="@drawable/app_header_divider"
            android:layout_width="2px"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_toLeftOf="@id/app_header_menu_1"/>
    </RelativeLayout>
    <TextView
        android:background="?app_header_bottom_line"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
</LinearLayout>

